Edited some methods in these classes since intellij recommended it